fix: correct registration end time variable in ProgramServiceImplTest for consistency
Signed-off-by: Joshua Onyema <onyemajoshua892@gmail.com>